# star_agent

./: .gitignore  README.md  pyproject.toml
agent/: __init__.py  protocols.py
agent/config/: __init__.py  loader.py
agent/profile/: __init__.py
agent/runtime/: __init__.py  console.py
agent/runtime/action_systems/: __init__.py  actions.py  task_system.py
agent/runtime/cognition_system/: __init__.py  dmn.py
agent/runtime/cognition_system/conversation_system/: __init__.py  broca.py  conversation.py  wernicke.py
agent/runtime/interfaces/: __init__.py  model.py  protocol.py  star_model.py  star_session.py
agent/runtime/kernel/: __init__.py  event_bus.py  generator_runtime.py  generator_session.py  runtime.py
agent/runtime/perception_systems/: __init__.py  perception.py
agent/runtime/persistence_system/: __init__.py  conversation_store.py  memory_store.py  store.py
agent/runtime/state_systems/: __init__.py  context_policy.py  workspace.py
agent_ling/: __init__.py  app.py
agent_ling/config/: __init__.py  default_agent.toml  loader.py
agent_ling/entrypoints/: __init__.py  console_ui.py  star_agent.py  web_ui.py
agent_ling_refactor/: README.md  REVIEW.md  __init__.py  activation.py  app.py  context.py  control.py  conversation.py  messages.py  model_gateway.py  prompts.py  runtime.py  scheduling.py  settings.py
agent_ling_refactor/config/: __init__.py  default_agent.toml
agent_ling_refactor/entrypoints/: __init__.py  console.py  star_agent.py  thought.py  web_ui.py
agent_ling_refactor/tests/: __init__.py  test_activation_gate.py  test_internal_control.py  test_refactored_flow.py
baseline_agent/: __init__.py  context.py  rich_output.py  star_agent.py  tool_loop.py
demo/: context_budget_demo.py  context_continuity_demo.py  conversation_context_compaction_demo.py  conversation_demo.py  generator_demo.py  task_tree_demo.py
docs/: ARCHITECTURE.md  DESIGN.md  DISCUSSION_HISTORY.md  PROTOCOL.md
tests/: test_action_idempotency.py  test_baseline_tool_loop.py  test_character_profile.py  test_cognitive_systems.py  test_conversation_flow.py  test_task_state_types.py
web_ui/: README.md  package-lock.json  package.json  tsconfig.json
web_ui/public/: app.js  index.html  pcm-processor.js  styles.css
web_ui/src/: components.ts  dialogue-world.ts  port.ts  protocol.ts  server.ts  systems.ts  types.ts  voice.ts
web_ui/tests/: dialogue-world.test.ts
(+6 files in other folders)
