[project]
name = "agent-ling"
version = "0.1.0"
description = "Event-driven task-centric agent runtime MVP"
requires-python = ">=3.13"
dependencies = [
    "menglong",
    "rich",
    "star-protocol",
    "textual",
]

[project.scripts]
agent-ling-star = "agent_ling.entrypoints.star_agent:main"
agent-ling-console = "agent_ling.entrypoints.web_ui:main"
agent-ling-web = "agent_ling.entrypoints.web_ui:main"
agent-ling-console-tui = "agent_ling.entrypoints.console_ui:main"
agent-ling-refactor = "agent_ling_refactor.entrypoints.console:main"
agent-ling-refactor-star = "agent_ling_refactor.entrypoints.star_agent:main"
agent-ling-refactor-web = "agent_ling_refactor.entrypoints.web_ui:main"
agent-ling-refactor-thought = "agent_ling_refactor.entrypoints.thought:main"


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
agent_ling = ["config/*.toml"]
agent_ling_refactor = ["config/*.toml"]

[tool.setuptools.packages.find]
include = ["agent", "agent.*", "agent_ling", "agent_ling.*", "agent_ling_refactor", "agent_ling_refactor.*"]
namespaces = false

[tool.uv]
package = true

[tool.uv.sources]
menglong = { path = "../New_MengLong", editable = true }
star-protocol = { path = "../star_protocol_python", editable = true }


[tool.pytest.ini_options]
pythonpath = ["."]
